<resources>
    <string name="app_name">Train your counting skills</string>

    <!-- Main screen -->
    <string name="main_title">Train your counting skills</string>
    <string name="menu_scores_title">Scores</string>
    <string name="menu_language_title">Language</string>
    <string name="menu_language_english_title">English</string>
    <string name="menu_language_russian_title">Russian</string>
    <string name="random_examples_title">Math examples</string>
    <string name="random_expressions_title">Math expressions</string>
    <string name="solve_percent_problems_title">Solve percent problems</string>
    <string name="solve_problems_title">Solve problems</string>

    <string name="set">TrainCounting</string>
    <string name="start_randoms">Start</string>

    <!-- Titles -->
    <string name="category_title">TrainCounting</string>
    <string name="level_title">Difficulty</string>
    <string name="time_title">Time</string>
    <string name="operators_title">Operators (+ by default)</string>
    <string name="math_questions_scores">Math questions best scores</string>
    <string name="math_expressions_scores">Math expressions best scores</string>
    <string name="score_level">Level</string>
    <string name="score_time">Time</string>
    <string name="score_number_of_questions">Number of answered questions</string>

    <!-- Operators -->
    <string name="plus_operator">+</string>
    <string name="minus_operator">-</string>
    <string name="multiply_operator">*</string>
    <string name="divide_operator">/</string>
    <string name="root_operator">√</string>

    <!-- Button titles -->
    <string name="start_button">Start</string>
    <string name="answer_button">Answer</string>
    <string name="skip_button">Skip</string>
    <string name="view_scores">View scores</string>

    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="zero_button">0</string>
    <string name="clear_all_button">C</string>
    <string name="delete_button">Del</string>

    <!-- Hint -->
    <string name="answer_hint">answer</string>

    <!-- Extras -->
    <string name="PACKAGE">com.dariapro.traincounting</string>
    <string name="MODE">com.dariapro.traincounting.mode</string>
    <string name="EXTRA_CATEGORY_ID">com.dariapro.traincounting.category_id</string>
    <string name="EXTRA_LEVEL_ID">com.dariapro.traincounting.level_id</string>
    <string name="EXTRA_QUESTION_ID">com.dariapro.traincounting.question_id</string>
    <string name="ARG_QUESTION">com.dariapro.traincounting.question</string>
    <string name="QUESTION_TYPE">com.dariapro.traincounting.question_type</string>
    <string name="LEVEL_EXTRA">com.dariapro.traincounting.level</string>
    <string name="TIME_EXTRA">com.dariapro.traincounting.time</string>
    <string name="PLUS_EXTRA">com.dariapro.traincounting.plus</string>
    <string name="MINUS_EXTRA">com.dariapro.traincounting.minus</string>
    <string name="MULTIPLY_EXTRA">com.dariapro.traincounting.multiply</string>
    <string name="DIVIDE_EXTRA">com.dariapro.traincounting.divide</string>
    <string name="ROOT_EXTRA">com.dariapro.traincounting.root</string>

    <!-- Answer -->
    <string name="CORRECT">Correct!</string>
    <string name="NOT_CORRECT">Not correct</string>

    <!-- Score result headers-->
    <string name="your_score">Your score is</string>
    <string name="your_best_score">Your best score is</string>
    <string name="score_questions">questions in</string>
    <string name="score_time_scale">minute(s)</string>

    <!-- Score -->
    <string name="questions_scores">Questions</string>
    <string name="expressions_scores">Expressions</string>
    <string name="percents_scores">Percents</string>
    <string name="NEW_BEST_SCORE">New Best Score!</string>
    <string name="all_scores">All best scores</string>
    <string name="no_scores">No scores for a while</string>

    <!-- Spinners -->
    <string name="level_spinner">Difficulty</string>
    <string name="time_spinner">Time</string>

    <!-- Answers -->
    <string name="solution_title">Solution</string>
    <string name="answer_title">Answer</string>

    <!-- Log tag -->
    <string name="TAG">appLogs</string>
    <string name="see_answer_button">See answer</string>
</resources>
