...
    android:id="@+id/question"
    android:orientation="vertical"
    android:background="@drawable/pattern">

        <TextView
            android:theme="@style/AppTextViewStyle"
            android:id="@+id/question_expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center" />
        <EditText
            style="@style/AppEditTextStyle"
            android:id="@+id/question_answer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:hint="@string/answer_hint"/>
...
