<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/random_question_start_fragment"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:theme="@style/AppTextViewStyle"
        android:id="@+id/level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/level_title"
        android:drawableLeft="@drawable/star_32_corners"/>

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/level_spinner_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <Spinner
            android:id="@+id/level_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:spinnerMode="dropdown">
        </Spinner>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/drop_32" />

    </RelativeLayout>

    <TextView
        style="@style/AppTextViewStyle"
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/time_title"
        android:drawableLeft="@drawable/time_32_corners"/>

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/time_spinner_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:spinnerMode="dropdown">
        </Spinner>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/drop_32" />

    </RelativeLayout>

    <TextView
        style="@style/AppTextViewStyle"
        android:id="@+id/operators_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/operators_title" />

    <LinearLayout
        android:id="@+id/operators_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal">

        <TextView
            style="@style/AppTextViewStyle"
            android:id="@+id/plus_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_operator"
            android:textSize="35sp" />
        <CheckBox
            android:id="@+id/plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:button="@null"
            android:background="?android:attr/listChoiceIndicatorMultiple"/>

        <TextView
            style="@style/AppTextViewStyle"
            android:id="@+id/minus_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_operator"
            android:textSize="35sp" />
        <CheckBox
            android:id="@+id/minus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:button="@null"
            android:background="?android:attr/listChoiceIndicatorMultiple"/>

        <TextView
            style="@style/AppTextViewStyle"
            android:id="@+id/multiply_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply_operator"
            android:textSize="35sp" />
        <CheckBox
            android:id="@+id/multiply"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:button="@null"
            android:background="?android:attr/listChoiceIndicatorMultiple"/>

        <TextView
            style="@style/AppTextViewStyle"
            android:id="@+id/divide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_operator"
            android:textSize="35sp" />
        <CheckBox
            android:id="@+id/divide"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:button="@null"
            android:background="?android:attr/listChoiceIndicatorMultiple"/>

        <TextView
            style="@style/AppTextViewStyle"
            android:id="@+id/root_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/root_operator"
            android:textSize="35sp" />
        <CheckBox
            android:id="@+id/root"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:button="@null"
            android:background="?android:attr/listChoiceIndicatorMultiple"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rand_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <Button
            style="@style/AppMainButtonStyle"
            android:id="@+id/start_randoms"
            android:layout_centerInParent="true"
            android:text="@string/start_button"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark"/>

    </RelativeLayout>

</LinearLayout>